stylesheets/homepage.css
* {
  background-color: black;
}

img {
  margin-top: 50px;
  margin-left: 75px;
  display: inline-block;
  float: left;
}


h1 {
  color: white;
  display: inline-block;
  margin-top: 250px;
  margin-right: 180px;
  font-family: 'Lobster', cursive;
  text-align: center;
  float: right;
}

.center {
  color: white;
  font-family: 'Lobster', cursive;
  display: inline-block;
  margin-left: 100px;
}

